[gd_scene load_steps=7 format=3 uid="uid://dl4178kk6km6x"]

[ext_resource type="Script" path="res://Objects/Scenes/hat_drop.gd" id="1_533cb"]
[ext_resource type="Texture2D" uid="uid://dxuni7vxcoht0" path="res://Assets/Art/Sprite/sparkle copy.png" id="2_l43ey"]
[ext_resource type="Texture2D" uid="uid://ce3mqam2rgpc5" path="res://Assets/Art/Hats/HatSprites.png" id="2_q0i3q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0wfnh"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjnto"]
size = Vector2(60, 44)

[sub_resource type="Gradient" id="Gradient_ftjkj"]
offsets = PackedFloat32Array(0.433333, 0.813333)
colors = PackedColorArray(1, 0.966667, 0, 1, 1, 0.988, 0.64, 0)

[node name="HatDrop" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_533cb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0wfnh")

[node name="passive_particles" type="CPUParticles2D" parent="."]
modulate = Color(1, 0.9, 0, 1)
lifetime = 1.5
local_coords = true
texture = ExtResource("2_l43ey")
emission_shape = 3
emission_rect_extents = Vector2(20, 5)
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, -80)
angular_velocity_min = -120.0
angular_velocity_max = 120.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_q0i3q")
hframes = 4
frame = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qjnto")

[node name="pickup_particle" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
texture = ExtResource("2_l43ey")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 300.0
angular_velocity_min = 180.0
angular_velocity_max = 354.55
orbit_velocity_min = 0.1
orbit_velocity_max = 0.3
damping_min = 14.581
damping_max = 100.0
color = Color(0.98, 1, 0.4, 1)
color_ramp = SubResource("Gradient_ftjkj")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
